# lab5

./: Ball.cpp  Ball.hpp  CMakeLists.txt  Color.cpp  Color.h  Dust.cpp  Dust.hpp  Painter.cpp  Physics.cpp  Physics.h  Point.h  Velocity.h  World.cpp  World.h  main.cpp
.github/workflows/: release.yml
black_box/: Application.cpp  Application.h  PainterImpl.cpp  PainterImpl.h  View.cpp  View.h
